# viztest

./: .gitignore  LICENSE  README.md  pyproject.toml
conda-recipe/: meta.yaml
src/viztest/: main.py  rando-dframes.pickle  viewer_data.json
tests/: test_data.py
